modal  visible fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -833,7 +833,7 @@ ul {
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .input-title {
@@ -846,7 +846,7 @@ ul {
 }
 
 .form-field {
-margin-bottom: 8px;
+margin-bottom: 24px;
 }
 
 .input-wrap {
@@ -883,13 +883,17 @@ margin-bottom: 8px;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   resize: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-text-area:focus {
  border: 1px solid #4D5AE5;
 }
 
+.label-span {
+  display: inline-flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .checkbox-text {
   font-size: 12px;
   line-height: 1.17;
